Fix download button z-index

--- a/src/components/IconCard/IconCard.css
+++ b/src/components/IconCard/IconCard.css
@@ -10,6 +10,7 @@
 
 .icon-card:hover {
     background: #F2F2F2;
+    z-index: 3000;
 }
 
 .icon-card__icon {
